--- a/Framework/SendEmail.xaml
+++ b/Framework/SendEmail.xaml
@@ -1,4 +1,4 @@
-﻿<Activity mc:Ignorable="sap sap2010 sads" x:Class="SendEmail" this:SendEmail.in_NAME="Abhishek" this:SendEmail.in_Domain="student.suas.ac.in"
+﻿<Activity mc:Ignorable="sap sap2010 sads" x:Class="SendEmail" this:SendEmail.in_NAME="Abhishek" this:SendEmail.in_Email_ID="jainsamyak330@gmail.com"
  xmlns="http://schemas.microsoft.com/netfx/2009/xaml/activities"
  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
  xmlns:mva="clr-namespace:Microsoft.VisualBasic.Activities;assembly=System.Activities"
@@ -11,11 +11,9 @@
  xmlns:ui="http://schemas.uipath.com/workflow/activities"
  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
   <x:Members>
-    <x:Property Name="in_ID" Type="InArgument(x:String)" />
     <x:Property Name="in_NAME" Type="InArgument(x:String)" />
-    <x:Property Name="in_ORGANIZATIONNAME" Type="InArgument(x:String)" />
     <x:Property Name="in_AttachPath" Type="InArgument(x:String)" />
-    <x:Property Name="in_Domain" Type="InArgument(x:String)" />
+    <x:Property Name="in_Email_ID" Type="InArgument(x:String)" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
@@ -69,26 +67,26 @@
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
   <Sequence DisplayName="SendEmail" sap2010:WorkflowViewState.IdRef="Sequence_1">
-    <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" Cc="{x:Null}" MailMessage="{x:Null}" TimeoutMS="{x:Null}" Body="[&quot;The attendance report of&quot;+in_NAME]" DisplayName="Send Outlook Mail Message" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" IsBodyHtml="False" IsDraft="False" Subject="Attendance Report" To="[in_ID+&quot;@&quot;+in_Domain]">
+    <ui:SendOutlookMail Account="{x:Null}" Bcc="{x:Null}" Cc="{x:Null}" MailMessage="{x:Null}" TimeoutMS="{x:Null}" Body="[&quot;The attendance report of&quot;+in_NAME]" DisplayName="Send Outlook Mail Message" sap2010:WorkflowViewState.IdRef="SendOutlookMail_1" IsBodyHtml="False" IsDraft="False" Subject="Attendance Report" To="[in_Email_ID]">
       <ui:SendOutlookMail.Files>
         <scg:List x:TypeArguments="InArgument(x:String)" Capacity="4">
           <InArgument x:TypeArguments="x:String">[in_AttachPath]</InArgument>
         </scg:List>
       </ui:SendOutlookMail.Files>
     </ui:SendOutlookMail>
-    <sads:DebugSymbol.Symbol>d01DOlxVc2Vyc1xBYmhpXERvY3VtZW50c1xHaXRIdWJcVWlQYXRoLUF0dGVuZGFuY2UtRnJhbWV3b3JrLVVBRlxTZW5kRW1haWwueGFtbAgBegGNAQEDAVYBXwECRwNQDgIBAUgFThoCAQJIyQJI6gICAQhLMktBAgEGSHpIqgECAQRIsgJIxQICAQM=</sads:DebugSymbol.Symbol>
+    <sads:DebugSymbol.Symbol>d1lDOlxVc2Vyc1xTYW15YWtcRG9jdW1lbnRzXFVpUGF0aFxVaVBhdGgtQXR0ZW5kYW5jZS1GcmFtZXdvcmstVUFGXEZyYW1ld29ya1xTZW5kRW1haWwueGFtbAgBfAGUAQEDAVYBXwECRQNODgIBAUYFTBoCAQJGyQJG2AICAQhJMklBAgEGRnpGqgECAQRGsgJGxQICAQM=</sads:DebugSymbol.Symbol>
   </Sequence>
   <sap2010:WorkflowViewState.ViewStateManager>
     <sap2010:ViewStateManager>
-      <sap2010:ViewStateData Id="SendOutlookMail_1" sap:VirtualizedContainerService.HintSize="314,145" />
-      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="336,269">
+      <sap2010:ViewStateData Id="SendOutlookMail_1" sap:VirtualizedContainerService.HintSize="313.6,145.6" />
+      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="336,270.4">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
-      <sap2010:ViewStateData Id="SendEmail_1" sap:VirtualizedContainerService.HintSize="376,349" />
+      <sap2010:ViewStateData Id="SendEmail_1" sap:VirtualizedContainerService.HintSize="376,350.4" />
     </sap2010:ViewStateManager>
   </sap2010:WorkflowViewState.ViewStateManager>
 </Activity>
